--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: NBA Beating the spread
-
+description: By: Alec Domotor, Kyrylo Kobzyev, Kyle Lindteigen, Yogesh Raparia, Jaya Sai Veepuru
